--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,9 +179,10 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-mapbox-gl_maps')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
-
+    
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
         debugImplementation files(hermesPath + "hermes-debug.aar")
